--- a/skripsi2/pubspec.yaml
+++ b/skripsi2/pubspec.yaml
@@ -1,5 +1,5 @@
 name: skripsi2
-description: "A new Flutter project."
+description: "Aplikasi Koperasi PT.Rutan"
 publish_to: 'none'
 version: 0.1.0
 
